bcParser.java
// Generated from bc.g4 by ANTLR 4.7.2

//package tools;
import java.util.*;
import java.lang.Math;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bcParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, MUL=8, DIV=9, 
		ADD=10, SUB=11, AND=12, OR=13, NOT=14, IF=15, ELSE=16, WHILE=17, VAR=18, 
		ID=19, FLOAT=20, INT=21, NEWLINE=22, WS=23, COMMENT=24, ASSIGN=25;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_print = 2, RULE_function = 3, RULE_mixedexpr = 4, 
		RULE_boolexpr = 5, RULE_stdexpr = 6, RULE_e = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "print", "function", "mixedexpr", "boolexpr", "stdexpr", 
			"e"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'print'", "','", "'read'", "'('", "')'", "'--'", "'++'", "'*'", 
			"'/'", "'+'", "'-'", "'&&'", "'||'", "'!'", "'if'", "'else'", "'while'", 
			"'var'", null, null, null, null, null, null, "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "MUL", "DIV", "ADD", 
			"SUB", "AND", "OR", "NOT", "IF", "ELSE", "WHILE", "VAR", "ID", "FLOAT", 
			"INT", "NEWLINE", "WS", "COMMENT", "ASSIGN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    /** "memory" for our calculator; variable/value pairs go here */
	    Map<String, Float> memory = new HashMap<String, Float>();
	    Scanner reader = new Scanner(System.in);
	    float eval(float l, int op, float r) {
	        
	        switch ( op ) {
	            case MUL : return l * r;
	            case DIV : return l / r;
	            case ADD : return l + r;
	            case SUB : return l - r;
	        }
	        return 0;
	    }

	    float getFloatValue(String f){
	        return Float.parseFloat(f);
	    }

	    float solveFunction(String func, float val){
	        switch(func){
	            case "sqrt": return (float)Math.sqrt(val);
	            case "s": return (float)Math.sin(val);
	            case "c": return (float)Math.cos(val);
	            case "l": return (float)Math.log(val);
	            case "e": return (float)Math.exp(val);
	        }
	        return 0;
	    }

	    int evalBool(float left, String op, float right) {
	        if(op.equals("&&")){
	            if(left!=0 && right!=0) {return 1;}
	        }
	        else if (op.equals("||")){
	            if(left!=0 || right!=0) {return 1;}
	        }
	        return 0;
	    }
	    int evalBool(float left, String op, int right) {
	        if(op.equals("&&")){
	            if(left!=0 && right!=0) {return 1;}
	        }
	        else if (op.equals("||")){
	            if(left!=0 || right!=0) {return 1;}
	        }
	        return 0;
	    }
	    int evalBool(int left, String op, float right) {
	        if(op.equals("&&")){
	            if(left!=0 && right!=0) {return 1;}
	        }
	        else if (op.equals("||")){
	            if(left!=0 || right!=0) {return 1;}
	        }
	        return 0;
	    }
	    int evalBool(int left, String op, int right) {
	        if(op.equals("&&")){
	            if(left!=0 && right!=0) {return 1;}
	        }
	        else if (op.equals("||")){
	            if(left!=0 || right!=0) {return 1;}
	        }
	        return 0;
	    }

	    int negation(String op, float val){
	        if(op.equals("!") && val==0){
	            return 1;
	        }
	        return 0;
	    }
	    int negation(String op, int val){
	        if(op.equals("!") && val==0){
	            return 1;
	        }
	        return 0;
	    }
	    float decrement(String s){
	        if(memory.containsKey(s)){
	            memory.put(s, memory.get(s) - 1); 
	            return memory.get(s);
	        }
	        return 0;
	    }

	    float decrement_post(String s){
	        float r;
	        if(memory.containsKey(s)){
	            r = memory.get(s);
	            memory.put(s, memory.get(s) - 1); 
	            return r;
	        }
	        return 0;
	    }

	    float increment(String s){
	        if(memory.containsKey(s)){
	            memory.put(s, memory.get(s) + 1); 
	            return memory.get(s);
	        }
	        return 0;
	    }    
	    float increment_post(String s){
	        float r;
	        if(memory.containsKey(s)){
	            r = memory.get(s);
	            memory.put(s, memory.get(s) + 1); 
	            return r;
	        }
	        return 0;
	    }

	public bcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bcVisitor ) return ((bcVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(16);
				stat();
				}
				}
				setState(19); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__5) | (1L << T__6) | (1L << NOT) | (1L << ID) | (1L << FLOAT) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public EContext e;
		public BoolexprContext boolexpr;
		public FunctionContext function;
		public MixedexprContext mixedexpr;
		public StdexprContext stdexpr;
		public Token ID;
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(bcParser.NEWLINE, 0); }
		public BoolexprContext boolexpr() {
			return getRuleContext(BoolexprContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public MixedexprContext mixedexpr() {
			return getRuleContext(MixedexprContext.class,0);
		}
		public StdexprContext stdexpr() {
			return getRuleContext(StdexprContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public TerminalNode ID() { return getToken(bcParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(bcParser.ASSIGN, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bcVisitor ) return ((bcVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(21);
				((StatContext)_localctx).e = e(0);
				setState(22);
				match(NEWLINE);
				System.out.println(((StatContext)_localctx).e.v);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				((StatContext)_localctx).boolexpr = boolexpr(0);
				setState(26);
				match(NEWLINE);
				System.out.println(((StatContext)_localctx).boolexpr.i);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(29);
				((StatContext)_localctx).function = function(0);
				setState(30);
				match(NEWLINE);
				System.out.println(((StatContext)_localctx).function.f);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(33);
				((StatContext)_localctx).mixedexpr = mixedexpr();
				setState(34);
				match(NEWLINE);
				System.out.println(((StatContext)_localctx).mixedexpr.m);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(37);
				((StatContext)_localctx).stdexpr = stdexpr();
				setState(38);
				match(NEWLINE);
				System.out.println(((StatContext)_localctx).stdexpr.s);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(41);
				print();
				setState(42);
				match(NEWLINE);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(44);
				((StatContext)_localctx).ID = match(ID);
				setState(45);
				match(ASSIGN);
				setState(46);
				((StatContext)_localctx).function = function(0);
				setState(47);
				match(NEWLINE);
				memory.put((((StatContext)_localctx).ID!=null?((StatContext)_localctx).ID.getText():null), ((StatContext)_localctx).function.f);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(50);
				((StatContext)_localctx).ID = match(ID);
				setState(51);
				match(ASSIGN);
				setState(52);
				((StatContext)_localctx).e = e(0);
				setState(53);
				match(NEWLINE);
				memory.put((((StatContext)_localctx).ID!=null?((StatContext)_localctx).ID.getText():null), ((StatContext)_localctx).e.v);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(56);
				((StatContext)_localctx).ID = match(ID);
				setState(57);
				match(ASSIGN);
				setState(58);
				((StatContext)_localctx).boolexpr = boolexpr(0);
				setState(59);
				match(NEWLINE);
				memory.put((((StatContext)_localctx).ID!=null?((StatContext)_localctx).ID.getText():null), (float)((StatContext)_localctx).boolexpr.i);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(62);
				((StatContext)_localctx).ID = match(ID);
				setState(63);
				match(ASSIGN);
				setState(64);
				((StatContext)_localctx).mixedexpr = mixedexpr();
				setState(65);
				match(NEWLINE);
				memory.put((((StatContext)_localctx).ID!=null?((StatContext)_localctx).ID.getText():null), (float)((StatContext)_localctx).mixedexpr.m);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(68);
				((StatContext)_localctx).ID = match(ID);
				setState(69);
				match(ASSIGN);
				setState(70);
				((StatContext)_localctx).stdexpr = stdexpr();
				setState(71);
				match(NEWLINE);
				memory.put((((StatContext)_localctx).ID!=null?((StatContext)_localctx).ID.getText():null), ((StatContext)_localctx).stdexpr.s);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(74);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public EContext e;
		public List<EContext> e() {
			return getRuleContexts(EContext.class);
		}
		public EContext e(int i) {
			return getRuleContext(EContext.class,i);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bcVisitor ) return ((bcVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_print);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__0);
			setState(78);
			((PrintContext)_localctx).e = e(0);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(79);
				match(T__1);
				setState(80);
				((PrintContext)_localctx).e = e(0);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			System.out.println(((PrintContext)_localctx).e.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public float f;
		public FunctionContext x;
		public Token ID;
		public EContext a;
		public FunctionContext function;
		public Token op;
		public FunctionContext y;
		public TerminalNode ID() { return getToken(bcParser.ID, 0); }
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public TerminalNode ADD() { return getToken(bcParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(bcParser.SUB, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bcVisitor ) return ((bcVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		return function(0);
	}

	private FunctionContext function(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FunctionContext _localctx = new FunctionContext(_ctx, _parentState);
		FunctionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_function, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				{
				setState(89);
				match(T__2);
				setState(90);
				match(T__3);
				setState(91);
				match(T__4);
				((FunctionContext)_localctx).f =  reader.nextFloat();
				}
				break;
			case ID:
				{
				setState(93);
				((FunctionContext)_localctx).ID = match(ID);
				setState(94);
				match(T__3);
				setState(95);
				((FunctionContext)_localctx).a = e(0);
				setState(96);
				match(T__4);
				((FunctionContext)_localctx).f =  solveFunction((((FunctionContext)_localctx).ID!=null?((FunctionContext)_localctx).ID.getText():null), ((FunctionContext)_localctx).a.v);
				}
				break;
			case T__3:
				{
				setState(99);
				match(T__3);
				setState(100);
				((FunctionContext)_localctx).function = function(0);
				setState(101);
				match(T__4);
				((FunctionContext)_localctx).f =  ((FunctionContext)_localctx).function.f;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(116);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new FunctionContext(_parentctx, _parentState);
						_localctx.x = _prevctx;
						_localctx.x = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_function);
						setState(106);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(107);
						((FunctionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((FunctionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(108);
						((FunctionContext)_localctx).y = ((FunctionContext)_localctx).function = function(4);
						((FunctionContext)_localctx).f =  eval(((FunctionContext)_localctx).x.f, (((FunctionContext)_localctx).op!=null?((FunctionContext)_localctx).op.getType():0), ((FunctionContext)_localctx).y.f);
						}
						break;
					case 2:
						{
						_localctx = new FunctionContext(_parentctx, _parentState);
						_localctx.x = _prevctx;
						_localctx.x = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_function);
						setState(111);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(112);
						((FunctionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((FunctionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(113);
						((FunctionContext)_localctx).y = ((FunctionContext)_localctx).function = function(3);
						((FunctionContext)_localctx).f =  eval(((FunctionContext)_localctx).x.f, (((FunctionContext)_localctx).op!=null?((FunctionContext)_localctx).op.getType():0), ((FunctionContext)_localctx).y.f);
						}
						break;
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MixedexprContext extends ParserRuleContext {
		public float m;
		public EContext a;
		public Token op;
		public BoolexprContext b;
		public BoolexprContext c;
		public MixedexprContext mixedexpr;
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public List<BoolexprContext> boolexpr() {
			return getRuleContexts(BoolexprContext.class);
		}
		public BoolexprContext boolexpr(int i) {
			return getRuleContext(BoolexprContext.class,i);
		}
		public TerminalNode MUL() { return getToken(bcParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(bcParser.DIV, 0); }
		public TerminalNode ADD() { return getToken(bcParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(bcParser.SUB, 0); }
		public TerminalNode AND() { return getToken(bcParser.AND, 0); }
		public TerminalNode OR() { return getToken(bcParser.OR, 0); }
		public MixedexprContext mixedexpr() {
			return getRuleContext(MixedexprContext.class,0);
		}
		public MixedexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mixedexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).enterMixedexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bcListener ) ((bcListener)listener).exitMixedexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bcVisitor ) return ((bcVisitor<? extends T>)visitor).visitMixedexpr(this);
			else return visitor.visitChildren(this);
		}
	}
